drlm (2.1.1) stable release; urgency=high

  * Solved some of bugs. 
  * No Client ID required for delete backups.
  * No Client ID required for manage backups.
  * Persistent mode deleted. 

 -- Pau Roura <pau@brainupdaters.net>  Mon, 21 Feb 2017 00:00:00 +0100

drlm (2.1.0) stable release; urgency=high

  * DRLM reporting with nsca-ng, nsca.
  * DRLM Server for SLES. 
  * Support for drlm unattended installation (instclient) on Ubuntu.
  * NEW Import & Export DR images between DRLM servers.
  * Pass DRLM global options to ReaR.
  * New DRLM backup job scheduler.
  * Addclient install mode (automatize install client after the client creation).
  * Solved lots of bugs.

 -- Pau Roura <pau@brainupdaters.net>  Thu, 09 Feb 2017 00:00:00 +0100
drlm (2.0.0) stable release; urgency=high

  * Multiarch netboot with GRUB2.
  * New installclient workflow.
  * Systemd support.
  * Netcat replacement with bash socket implementation.
  * Improvement of runbackup workflow.
  * Parallel backups support.
  * New database backend (sqlite3).
  * New error reporting methods (mail,nagios,zabbix).
  * lots of bugfixes.

 -- Didac Oliveira <didac@brainupdaters.net>  Wed, 6 Jul 2016 00:00:00 +0100
drlm (1.1.3) stable release; urgency=low

  * bugfixes.

 -- Pau Roura <pau@brainupdaters.net>  Thu, 11 Feb 2016 00:00:00 +0100
drlm (1.1.2) stable release; urgency=low

  * bugfixes.

 -- Pau Roura <pau@brainupdaters.net>  Wed, 10 Feb 2016 00:00:00 +0100
drlm (1.1.1) stable release; urgency=low

  * bugfixes.

 -- Pau Roura <pau@brainupdaters.net>  Wed, 30 Mar 2015 00:00:00 +0100
drlm (1.1.0) stable release; urgency=low

  * new features.
  * bugfixes.

 -- Pau Roura <pau@brainupdaters.net>  Wed, 18 Mar 2015 00:00:00 +0100
drlm (1.0.0) beta release; urgency=low

  * Initial package.

 -- Didac Oliveira <didac@brainupdaters.net>  Sun, 08 Dec 2013 00:00:00 +0100