@@ -1,6 +1,12 @@
 #POST RUN BACKUP
 
-Log "Fixing PXE permissions for DR image ..."
+F_CLI_MAC=$(format_mac ${CLI_MAC} ":")
+CLI_KERNEL_FILE=$(ls ${STORDIR}/${CLI_NAME}/PXE/*kernel | xargs -n 1 basename)
+CLI_INITRD_FILE=$(ls ${STORDIR}/${CLI_NAME}/PXE/*initrd* | xargs -n 1 basename)
+CLI_REAR_PXE_FILE=$(grep -w append ${STORDIR}/${CLI_NAME}/PXE/rear-* | awk -F':' '{print $1}' | xargs -n 1 basename)
+CLI_KERNEL_OPTS=$(grep -h -w append ${STORDIR}/${CLI_NAME}/PXE/${CLI_REAR_PXE_FILE} | awk '{print substr($0, index($0,$3))}' | sed 's/vga/gfxpayload=vga/')
+
+Log "$PROGRAM:$WORKFLOW:postbackup:${CLI_NAME}: Fixing PXE permissions for DR image ..."
 
 if [ $(stat -c %a ${STORDIR}/${CLI_NAME}) != "755" ]; then
 	chmod 755 ${STORDIR}/${CLI_NAME}
@@ -16,36 +22,37 @@ if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE) != "755" ]; then
 	fi
 fi
 
-if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/*.kernel) != "755" ]; then
-	chmod 755 ${STORDIR}/${CLI_NAME}/PXE/*.kernel
+if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/${CLI_KERNEL_FILE}) != "755" ]; then
+	chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_KERNEL_FILE}
 	if [ $? -ne 0 ]; then
-		Error "chmod 755 ${STORDIR}/${CLI_NAME}/PXE/*.kernel failed!"
+		Error "chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_KERNEL_FILE} failed!"
 	fi
 fi
 
-if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/*.initrd.cgz) != "755" ]; then
-        chmod 755 ${STORDIR}/${CLI_NAME}/PXE/*.initrd.cgz
+if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/${CLI_INITRD_FILE}) != "755" ]; then
+        chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_INITRD_FILE}
         if [ $? -ne 0 ]; then
-                Error "chmod 755 ${STORDIR}/${CLI_NAME}/PXE/*.initrd.cgz failed!"
+                Error "chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_INITRD_FILE} failed!"
         fi
 fi
 
-if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/rear-*) != "755" ]; then
-        chmod 755 ${STORDIR}/${CLI_NAME}/PXE/rear-*
+if [ $(stat -c %a ${STORDIR}/${CLI_NAME}/PXE/${CLI_REAR_PXE_FILE}) != "755" ]; then
+        chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_REAR_PXE_FILE}
         if [ $? -ne 0 ]; then
-                Log "WARNING:$PROGRAM:$WORKFLOW: chmod 755 ${STORDIR}/${CLI_NAME}/PXE/rear-* failed!"
+                Log "WARNING:$PROGRAM:$WORKFLOW: chmod 755 ${STORDIR}/${CLI_NAME}/PXE/${CLI_REAR_PXE_FILE} failed!"
         fi
 fi
 
+Log "$PROGRAM:$WORKFLOW:postbackup:${CLI_NAME}: Fixing PXE permissions for DR image ... Success!"
 
-Log "$PROGRAM:$WORKFLOW:postbackup:${CLI_NAME}: Enabling DRLM Store ...."
+Log "$PROGRAM:$WORKFLOW:postbackup:${CLI_NAME}: Enabling DRLM Store ..."
 
 	if do_remount ro ${CLI_ID} ${CLI_NAME} ;
 	then
-		Log "$PROGRAM:$WORKFLOW:postbackup:FS:MOUNT:LOOPDEV(${CLI_ID}):MNT($STORDIR/$CLI_NAME): .... Success!"
+		Log "$PROGRAM:$WORKFLOW:postbackup:FS:MOUNT:LOOPDEV(${CLI_ID}):MNT($STORDIR/$CLI_NAME): ... Success!"
 		if enable_nfs_fs_ro ${CLI_NAME} ;
 		then
-			Log "$PROGRAM:$WORKFLOW:postbackup:NFS:ENABLE(ro):$CLI_NAME: .... Success!"
+			Log "$PROGRAM:$WORKFLOW:postbackup:NFS:ENABLE(ro):$CLI_NAME: ... Success!"
 		else
 			report_error "ERROR:$PROGRAM:$WORKFLOW:postbackup:NFS:ENABLE (ro):$CLI_NAME: Problem enabling NFS export (ro)! aborting ..."
 			Error "$PROGRAM:$WORKFLOW:postbackup:NFS:ENABLE (ro):$CLI_NAME: Problem enabling NFS export (ro)! aborting ..."
@@ -59,26 +66,22 @@ Log "$PROGRAM:$WORKFLOW:postbackup:${CLI_NAME}: Enabling DRLM Store .... Success
 
 if [[ ! -d ${STORDIR}/boot/cfg ]]; then mkdir -p ${STORDIR}/boot/cfg; fi
 
-F_CLI_MAC=$(format_mac ${CLI_MAC} ":")
-if [[ ! -e ${STORDIR}/boot/cfg/${F_CLI_MAC} ]]
-then
-    Log "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Creating MAC Address (GRUB2) boot configuration file ...."
+Log "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Creating MAC Address (GRUB2) boot configuration file ..."
 
 cat << EOF > ${STORDIR}/boot/cfg/${F_CLI_MAC}
        
   echo "Loading Linux kernel ..."
-  linux (tftp)/${CLI_NAME}/PXE/${CLI_NAME}.kernel rw gfxpayload=vga=normal console=tty0 console=ttyS0,115200n8
+  linux (tftp)/${CLI_NAME}/PXE/${CLI_KERNEL_FILE} ${CLI_KERNEL_OPTS}
   echo "Loading Linux Initrd image ..."
-  initrd (tftp)/${CLI_NAME}/PXE/${CLI_NAME}.initrd.cgz
+  initrd (tftp)/${CLI_NAME}/PXE/${CLI_INITRD_FILE}
 
 EOF
 
-    test -f ${STORDIR}/boot/cfg/${F_CLI_MAC}
+test -f ${STORDIR}/boot/cfg/${F_CLI_MAC}
 
-    if [ $? -eq 0 ]; then
-        Log "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}:Creating MAC Address (GRUB2) boot configuration file .... Success!"
-    else
-        report_error "ERROR:$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Problem Creating MAC Address (GRUB2) boot configuration file! aborting ..."
-        Error "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Problem Creating MAC Address (GRUB2) boot configuration file! aborting ..."
-    fi
+if [ $? -eq 0 ]; then
+    Log "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}:Creating MAC Address (GRUB2) boot configuration file ... Success!"
+else
+    report_error "ERROR:$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Problem Creating MAC Address (GRUB2) boot configuration file! aborting ..."
+    Error "$PROGRAM:$WORKFLOW:postbackup:PXE:${CLI_NAME}: Problem Creating MAC Address (GRUB2) boot configuration file! aborting ..."
 fi
