@@ -3,7 +3,10 @@ drlm (2.1.1) stable release; urgency=high
   * Solved some of bugs. 
   * No Client ID required for delete backups.
   * No Client ID required for manage backups.
-  * Persistent mode deleted. 
+  * bkpmgr: Persistent mode deleted. 
+  * Solved PXE files: forced console=ttyS0 in kernel options.
+  * Solved hardcoded PXE filenames (initrd.xz (lzma) now supported).
+  * While recommended, It ain't mandatory to use hostname as client_name.
 
  -- Pau Roura <pau@brainupdaters.net>  Mon, 21 Feb 2017 00:00:00 +0100
 
